--- a/attack-surface-managment.html
+++ b/attack-surface-managment.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>SekurdEYE</title>
+  <title>Attack Surface Managment</title>
 </head>
 
 <body>
@@ -247,7 +247,7 @@
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
       <li class="active">
-        <a href="./attack-service-managment.html">Products</a>
+         <a href="./attack-surface-managment.html">Products</a>
       </li>
       <li>
         <a class="" href="./contact-us.html">Contact us</a>
@@ -278,7 +278,7 @@
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
                 <li class="nav_item active">
-                  <a class="nav_link" href="./attack-service-managment.html">products</a>
+                  <a class="nav_link" href="./attack-surface-managment.html">Products</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="./contact-us.html">Contact us</a>
@@ -345,7 +345,7 @@
                     </li>
                     <li>
                       <img src="./assets/images/Shape (17).svg" alt="">
-                      <span>Seats ( verified business email)g</span>
+                      <span>Seats (verified business E-mails)</span>
                     </li>
                     <li>
                       <img src="./assets/images/Shape (17).svg" alt="">
@@ -397,7 +397,7 @@
                     </li>
                   </ul>
                   <div class="btn_talk">
-                    <a href="">Talk to sales</a>
+                    <a href="" class="scheduleButton">Talk to sales</a>
                   </div>
                 </div>
               </div>
@@ -417,7 +417,7 @@
                     </li>
                     <li>
                       <img src="./assets/images/Shape (17).svg" alt="">
-                      <span>Seats (3 verified business emails)</span>
+                      <span>Seats (3 verified business E-mails)</span>
                     </li>
                     <li>
                       <img src="./assets/images/Shape (17).svg" alt="">
@@ -445,7 +445,7 @@
                     </li>
                   </ul>
                   <div class="btn_talk">
-                    <a href="">Talk to sales</a>
+                    <a href="" class="scheduleButton">Talk to sales</a>
                   </div>
                 </div>
               </div>
@@ -461,7 +461,7 @@
                     </li>
                     <li>
                       <img src="./assets/images/Shape (17).svg" alt="">
-                      <span>Seats (verified business emails)</span>
+                      <span>Seats (verified business E-mails)</span>
                     </li>
                     <li>
                       <img src="./assets/images/Shape (17).svg" alt="">
@@ -477,7 +477,7 @@
                     </li>
                   </ul>
                   <div class="btn_talk">
-                    <a href="">Talk to sales</a>
+                    <a href="" class="scheduleButton">Talk to sales</a>
                   </div>
                 </div>
               </div>
@@ -502,7 +502,7 @@
                     </li>
                   </ul>
                   <div class="btn_talk">
-                    <a href="">Talk to sales</a>
+                    <a href="" class="scheduleButton">Talk to sales</a>
                   </div>
                 </div>
               </div>
@@ -828,9 +828,9 @@
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#ServiceSection">Our Services</a></li>
-              <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
-              <li><a href="#pricingSection">Pricing</a></li>
+              <li><a href="#FeaturesSection">Our Features</a></li>
+              <li><a href="./about-us.html" target="_blank">About Us</a></li>
+              <li><a href="./attack-surface-managment.html">Products</a></li>
               <li><a href="./terms-condition.html">Terms & Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
               <!-- <li><a href="">Testemonial</a></li> -->
@@ -845,7 +845,7 @@
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+              <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
                     Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
