--- a/contact-us.html
+++ b/contact-us.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>SekurdEYE</title>
+  <title>Contact Us</title>
 </head>
 
 <body>
@@ -246,7 +246,7 @@
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
       <li class="">
-        <a href="./attack-service-managment.html">Products</a>
+         <a href="./attack-surface-managment.html">Products</a>
       </li>
       <li class="active">
         <a class="" href="./contact-us.html">Contact us</a>
@@ -277,7 +277,7 @@
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="./attack-service-managment.html">products</a>
+                  <a class="nav_link" href="./attack-surface-managment.html">Products</a>
                 </li>
                 <li class="nav_item active">
                   <a class="nav_link" href="./contact-us.html">Contact us</a>
@@ -383,8 +383,7 @@
               <img src="./assets/images/logo 1.svg" alt="">
             </a>
             <p>
-              Join us at Sekurd, and together, let’s build a secure foundation for your organization’s digital
-              journey.
+              Join us at Sekurd, and together, let’s build a secure foundation for your organization’s digital journey.
             </p>
             <ul class="list-unstyled d-flex">
               <li><a href="https://www.instagram.com/sekurd_official/" target="_blank"><img src="./assets/images/ig.svg"
@@ -401,9 +400,9 @@
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#ServiceSection">Our Services</a></li>
-              <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
-              <li><a href="#pricingSection">Pricing</a></li>
+              <li><a href="#FeaturesSection">Our Features</a></li>
+              <li><a href="./about-us.html" target="_blank">About Us</a></li>
+              <li><a href="./attack-surface-managment.html">Products</a></li>
               <li><a href="./terms-condition.html">Terms & Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
               <!-- <li><a href="">Testemonial</a></li> -->
@@ -416,8 +415,7 @@
             <ul class="list-unstyled">
               <li><a href=""><i class="fas fa-envelope"></i><span>info@sekurd.com</span></a></li>
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
-              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK
-                    Office:71-75
+              <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
               <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
                     Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
