--- a/index_old.html
+++ b/index_old.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>SekurdEYE</title>
+  <title>Home</title>
 </head>
 
 <body>
