--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>SekurdEYE</title>
+  <title>Privacy Policy</title>
 </head>
 
 <body>
@@ -247,7 +247,7 @@
         <a href="./index.html#FeaturesSection">Features</a>
       </li>
       <li>
-        <a href="./attack-service-managment.html">Products</a>
+         <a href="./attack-surface-managment.html">Products</a>
       </li>
       <li>
         <a class="scheduleButton">Contact us</a>
@@ -278,7 +278,7 @@
                   <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
                 </li>
                 <li class="nav_item">
-                    <a class="nav_link" href="./attack-service-managment.html">Products</a>
+                    <a class="nav_link" href="./attack-surface-managment.html">Products</a>
                   </li>
                 <li class="nav_item">
                   <a class="nav_link scheduleButton">Contact us</a>
@@ -429,9 +429,9 @@
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#ServiceSection">Our Services</a></li>
-              <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
-              <li><a href="#pricingSection">Pricing</a></li>
+              <li><a href="#FeaturesSection">Our Features</a></li>
+              <li><a href="./about-us.html" target="_blank">About Us</a></li>
+              <li><a href="./attack-surface-managment.html">Products</a></li>
               <li><a href="./terms-condition.html">Terms & Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
               <!-- <li><a href="">Testemonial</a></li> -->
@@ -446,7 +446,7 @@
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+              <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
                     Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
