--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./assets/css/aos.css" />
   <!-- for english version please change style to ar style ./assets/css/style-ar.css -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>SekurdEYE</title>
+  <title>Product</title>
 </head>
 
 <body>
@@ -730,9 +730,9 @@
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#ServiceSection">Our Services</a></li>
-              <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
-              <li><a href="#pricingSection">Pricing</a></li>
+              <li><a href="#FeaturesSection">Our Features</a></li>
+              <li><a href="./about-us.html" target="_blank">About Us</a></li>
+              <li><a href="./attack-surface-managment.html">Products</a></li>
               <li><a href="./terms-condition.html">Terms & Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
               <!-- <li><a href="">Testemonial</a></li> -->
