--- a/about-us-old.html
+++ b/about-us-old.html
@@ -699,7 +699,7 @@
   <div class="custom_footer">
     <div class="container-fluid pd-100">
       <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-2">
           <div class="footer_logo">
             <a href="">
               <img src="./assets/images/logo 1.svg" alt="">
@@ -718,20 +718,28 @@
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-2">
+        <div class="col-3 col-md-2 col-lg-1">
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#ServiceSection">Our Services</a></li>
-              <li><a href="https://sekurd.com/about-us.html" target="_blank">About Us</a></li>
-              <li><a href="#pricingSection">Pricing</a></li>
-              <li><a href="./terms-condition.html">Terms & Conditions</a></li>
+              <li><a href="./about-us.html">About Us</a></li>
+              <li><a href="./attack-surface-managment-pricing.html">Pricing</a></li>
+              <li><a href="./contact-us.html">Contact</a></li>
+             <li><a href="./terms-condition.html">Terms Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-              <!-- <li><a href="">Testemonial</a></li> -->
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-3 col-md-2 col-lg-2">
+          <div class="footer_links">
+            <h5>Products</h5>
+            <ul class="list-unstyled">
+              <li><a href="./dark-web-montring-page.html">Dark web monitoring </a></li>
+              <li><a href="./attack-surface-managment-page.html">Attack Surface management </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 col-lg-3">
           <div class="footer_links">
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
@@ -739,7 +747,7 @@
               <li><a href=""><i class="fas fa-phone"></i><span>(+974) 401 969 85</span></a></li>
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>UK Office:71-75
                     Shelton Street Covent Garden London WC2H 9JQ</span></a></li>
-             <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
+              <!-- <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Office 2504,
                     Floor 25, Marina Twin Tower, Tower B, Lusail, Doha, Qatar</span></a></li> -->
               <li><a href="" class="d-flex align-items-start"><i class="fas fa-map-marker-alt"></i><span>Addiyar
                     Building, Ground Floor, RAG Biz HQ, Sheikh Zayed Rd , Al Wasl , Dubai</span></a></li>
