--- a/index.html
+++ b/index.html
@@ -238,16 +238,20 @@
   <nav id="menu">
     <ul>
       <li class="active">
-        <a href="#HomeSection">Home</a>
+        <a href="./index.html">Home</a>
       </li>
       <li>
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
-        <a href="./index.html#FeaturesSection">Features</a>
+        <span>Products</span>
+        <ul>
+          <li><a href="./dark-web-montring-page.html">Darkweb monitoring </a></li>
+          <li><a href="./attack-surface-managment-page.html">Attack surface management </a></li>
+        </ul>
       </li>
       <li>
-        <a href="./attack-surface-managment.html">Products</a>
+        <a href="./attack-surface-managment-pricing.html">Price</a>
       </li>
       <li>
         <a class="" href="./contact-us.html">Contact us</a>
@@ -269,16 +273,32 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item active">
-                  <a class="nav_link" href="#HomeSection">Home</a>
+                  <a class="nav_link" href="./index.html">Home</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
-                <li class="nav_item">
-                  <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
+                <li class="nav_item submenu_parent">
+                  <a class="nav_link" href="./attack-surface-managment.html">Products</a>
+                  <div class="submenu">
+                    <ul class="list-unstyled">
+                      <li>
+                        <a href="./dark-web-montring-page.html">
+                          <img src="./assets/images/hat.svg" alt="">
+                          <span>Dark Web Monitoring</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="./attack-surface-managment-page.html">
+                          <img src="./assets/images/Inbox.svg" alt="">
+                          <span>Attack Surface Management</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </li>
                 <li class="nav_item">
-                  <a class="nav_link" href="./attack-surface-managment.html">Products</a>
+                  <a class="nav_link" href="./index.html#FeaturesSection">Price</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="./contact-us.html">Contact us</a>
@@ -345,7 +365,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/Shape.svg" alt="">
             </div>
             <div class="card_body">
               <p>Compromised Credentials Monitoring</p>
@@ -355,7 +375,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/check-shield.svg" alt="">
             </div>
             <div class="card_body">
               <p>Consumer Fraud Prevention</p>
@@ -365,7 +385,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/Shape-3.svg" alt="">
             </div>
             <div class="card_body">
               <p>VIP Extra Protection</p>
@@ -375,7 +395,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/virus-laptop.svg" alt="">
             </div>
             <div class="card_body">
               <p>Cyber Thread Intelligence</p>
@@ -385,7 +405,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/Shape-1.svg" alt="">
             </div>
             <div class="card_body">
               <p>External Attack Surface Management</p>
@@ -395,7 +415,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/malware-target.svg" alt="">
             </div>
             <div class="card_body">
               <p>VIP Protection</p>
@@ -405,7 +425,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="services_cards_index_card">
             <div class="card_icon">
-              <img src="./assets/images/global-search.svg" alt="">
+              <img src="./assets/images/icons/Shape-2.svg" alt="">
             </div>
             <div class="card_body">
               <p>Third-Party Monitoring</p>
@@ -556,7 +576,7 @@
               </p>
               <a href="#getFreeDescovery"><span>Discover</span><i class="fas fa-arrow-right"></i></a>
             </div>
-  
+
             <div class="wrapper">
               <h5>Dark Web Monitoring </h5>
               <p>
@@ -942,11 +962,10 @@
     </div>
   </div>
 
-
   <div class="custom_footer">
     <div class="container-fluid pd-100">
       <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-2">
           <div class="footer_logo">
             <a href="">
               <img src="./assets/images/logo 1.svg" alt="">
@@ -965,20 +984,28 @@
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-2">
+        <div class="col-3 col-md-2 col-lg-1">
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#FeaturesSection">Our Features</a></li>
-              <li><a href="./about-us.html" target="_blank">About Us</a></li>
-              <li><a href="./attack-surface-managment.html">Products</a></li>
-              <li><a href="./terms-condition.html">Terms & Conditions</a></li>
+              <li><a href="./about-us.html">About Us</a></li>
+              <li><a href="./attack-surface-managment-pricing.html">Pricing</a></li>
+              <li><a href="./contact-us.html">Contact</a></li>
+             <li><a href="./terms-condition.html">Terms Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-              <!-- <li><a href="">Testemonial</a></li> -->
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-3 col-md-2 col-lg-2">
+          <div class="footer_links">
+            <h5>Products</h5>
+            <ul class="list-unstyled">
+              <li><a href="./dark-web-montring-page.html">Dark web monitoring </a></li>
+              <li><a href="./attack-surface-managment-page.html">Attack Surface management </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 col-lg-3">
           <div class="footer_links">
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
