--- a/terms-condition.html
+++ b/terms-condition.html
@@ -237,31 +237,34 @@
   <!-- mobile menu -->
   <nav id="menu">
     <ul>
-      <li class="">
-        <a href="./index.html#HomeSection">Home</a>
+      <li>
+        <a href="./index.html">Home</a>
       </li>
       <li>
         <a href="./about-us.html">About Us</a>
       </li>
       <li>
-        <a href="./index.html#FeaturesSection">Features</a>
+        <span>Products</span>
+        <ul>
+          <li><a href="./dark-web-montring-page.html">Darkweb monitoring </a></li>
+          <li><a href="./attack-surface-managment-page.html">Attack surface management </a></li>
+        </ul>
       </li>
       <li>
-        <a href="./attack-surface-managment.html">Products</a>
+        <a href="./attack-surface-managment-pricing.html">Price</a>
       </li>
       <li>
-        <a class="scheduleButton">Contact us</a>
+        <a class="" href="./contact-us.html">Contact us</a>
       </li>
     </ul>
   </nav>
-
 
   <div class="custom_navbar inner_custom_navbar">
     <div class="container-fluid pd-100">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-12 col-lg-7">
           <nav class="navbar-links d-flex align-items-center">
-            <a class="navbarـbrand" href="#">
+            <a class="navbarـbrand" href="./index.html">
               <img src="./assets/images/logo 1.svg" alt="logo" />
             </a>
             <a class="navbar_toggler_btn" href="#menu">
@@ -270,19 +273,35 @@
             <div class="linkslis">
               <ul class="navbar_nav d-flex align-items-center list-unstyled">
                 <li class="nav_item">
-                  <a class="nav_link" href="./index.html#HomeSection">Home</a>
+                  <a class="nav_link" href="./index.html">Home</a>
                 </li>
                 <li class="nav_item">
                   <a class="nav_link" href="./about-us.html">About Us</a>
                 </li>
-                <li class="nav_item">
-                  <a class="nav_link" href="./index.html#FeaturesSection">Features</a>
+                <li class="nav_item submenu_parent">
+                  <a class="nav_link" href="./attack-surface-managment.html">Products</a>
+                  <div class="submenu">
+                    <ul class="list-unstyled">
+                      <li>
+                        <a href="./dark-web-montring-page.html">
+                          <img src="./assets/images/hat.svg" alt="">
+                          <span>Dark Web Monitoring</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="./attack-surface-managment-page.html">
+                          <img src="./assets/images/Inbox.svg" alt="">
+                          <span>Attack Surface Management</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </li>
                 <li class="nav_item">
-                    <a class="nav_link" href="./attack-surface-managment.html">Products</a>
-                  </li>
+                  <a class="nav_link" href="./attack-surface-managment-pricing.html">Price</a>
+                </li>
                 <li class="nav_item">
-                  <a class="nav_link scheduleButton">Contact us</a>
+                  <a class="nav_link" href="./contact-us.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -414,7 +433,7 @@
   <div class="custom_footer">
     <div class="container-fluid pd-100">
       <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-4 col-lg-2">
           <div class="footer_logo">
             <a href="">
               <img src="./assets/images/logo 1.svg" alt="">
@@ -433,20 +452,28 @@
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-2">
+        <div class="col-3 col-md-2 col-lg-1">
           <div class="footer_links">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#FeaturesSection">Our Features</a></li>
-              <li><a href="./about-us.html" target="_blank">About Us</a></li>
-              <li><a href="./attack-surface-managment.html">Products</a></li>
-              <li><a href="./terms-condition.html">Terms & Conditions</a></li>
+              <li><a href="./about-us.html">About Us</a></li>
+              <li><a href="./attack-surface-managment-pricing.html">Pricing</a></li>
+              <li><a href="./contact-us.html">Contact</a></li>
+             <li><a href="./terms-condition.html">Terms Conditions</a></li>
               <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-              <!-- <li><a href="">Testemonial</a></li> -->
             </ul>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-3">
+        <div class="col-3 col-md-2 col-lg-2">
+          <div class="footer_links">
+            <h5>Products</h5>
+            <ul class="list-unstyled">
+              <li><a href="./dark-web-montring-page.html">Dark web monitoring </a></li>
+              <li><a href="./attack-surface-managment-page.html">Attack Surface management </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 col-lg-3">
           <div class="footer_links">
             <h5>Contact Us</h5>
             <ul class="list-unstyled">
